--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,21 @@
 [project]
 name = "ml-engineering-bootcamp"
 version = "0.1.0"
-description = "Add your description here"
+description = "Machine Learning Engineering Bootcamp project series"
 readme = "README.md"
 requires-python = ">=3.13"
+
 dependencies = [
     "boto3>=1.40.68",
     "docker>=7.1.0",
     "fastapi>=0.121.0",
-    "gradio>=5.49.1",
-    "great-expectations>=1.9.0",
+    "great-expectations==1.9.0",
     "hydra-core>=1.3.2",
+    "ipykernel>=6.29.5",
+    "jupyter>=1.0.0",
     "joblib>=1.5.2",
     "lightgbm>=4.6.0",
+    "loguru>=0.7.2",
     "matplotlib>=3.10.7",
     "mlflow>=3.6.0",
     "numpy>=2.3.4",
@@ -22,6 +25,7 @@ dependencies = [
     "polars>=1.35.1",
     "pyarrow>=22.0.0",
     "pydantic>=2.11.10",
+    "python-dotenv>=1.0.1",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
     "s3fs>=0.4.2",
@@ -29,8 +33,10 @@ dependencies = [
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "streamlit>=1.50.0",
+    "tqdm>=4.66.4",
     "uvicorn>=0.38.0",
     "xgboost>=3.1.1",
+    "pandera>=0.26.1",
 ]
 
 [dependency-groups]
@@ -40,4 +46,5 @@ dev = [
     "isort>=7.0.0",
     "pre-commit>=4.3.0",
     "pytest>=8.4.2",
+    "pytest-cov>=4.1.0",
 ]
